@@ -1,8 +1,8 @@
 package com.dreamypatisiel.devdevdev.elastic.domain.service;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.opensearch.action.search.SearchRequest;
@@ -10,10 +10,9 @@ import org.opensearch.action.search.SearchResponse;
 import org.opensearch.client.RequestOptions;
 import org.opensearch.client.RestHighLevelClient;
 import org.opensearch.common.unit.Fuzziness;
+import org.opensearch.index.query.MultiMatchQueryBuilder;
+import org.opensearch.index.query.QueryBuilders;
 import org.opensearch.search.builder.SearchSourceBuilder;
-import org.opensearch.search.suggest.SuggestBuilder;
-import org.opensearch.search.suggest.SuggestBuilders;
-import org.opensearch.search.suggest.completion.CompletionSuggestionBuilder;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
@@ -25,8 +24,8 @@ public class ElasticKeywordService {
     @Value("#{@elasticsearchIndexConfigService.getIndexName()}")
     private String INDEX_NAME_POSTFIX;
     public static final String INDEX_NAME = "keywords";
-    public static final String SUGGEST_FIELD_NAME = "words";
-    public static final String SUGGESTION_KEY = "suggest";
+    public static final String FIELD_NAME = "keyword";
+    public static final String[] MULTI_FIELD_NAMES = {"keyword", "keyword.nfc", "keyword.chosung"};
     public static final int AUTOCOMPLETION_MAX_SIZE = 20;
 
 
@@ -34,27 +33,24 @@ public class ElasticKeywordService {
 
     public List<String> autocompleteKeyword(String prefix) throws IOException {
 
-        // suggest 쿼리 생성
-        CompletionSuggestionBuilder completionSuggestionBuilder = SuggestBuilders
-                .completionSuggestion(SUGGEST_FIELD_NAME)
-                .prefix(prefix, Fuzziness.ZERO) // Fuzziness를 0으로 설정하여 정확히 일치하는 키워드만 검색
-                .size(AUTOCOMPLETION_MAX_SIZE); // 최대 20개 조회
-
-        SuggestBuilder suggestBuilder = new SuggestBuilder()
-                .addSuggestion(SUGGESTION_KEY, completionSuggestionBuilder);
+        MultiMatchQueryBuilder multiMatchQueryBuilder = QueryBuilders.multiMatchQuery(
+                prefix, // 검색할 쿼리 스트링
+                MULTI_FIELD_NAMES); // multi-match 쿼리를 실행할 필드 목록 정의
+        multiMatchQueryBuilder.fuzziness(Fuzziness.ZERO); // Fuzziness를 0으로 설정하여 정확히 일치하는 키워드만 검색
 
         SearchSourceBuilder searchSourceBuilder = new SearchSourceBuilder()
-                .suggest(suggestBuilder);
+                .query(multiMatchQueryBuilder)
+                .size(AUTOCOMPLETION_MAX_SIZE); // 최대 20개 조회
 
+        // 조회 쿼리 생성
         SearchRequest searchRequest = new SearchRequest(INDEX_NAME + INDEX_NAME_POSTFIX)
                 .source(searchSourceBuilder);
 
         // 응답 데이터 가공
         SearchResponse searchResponse = elasticsearchClient.search(searchRequest, RequestOptions.DEFAULT);
-        return searchResponse.getSuggest().getSuggestion(SUGGESTION_KEY).getEntries().stream()
-                .flatMap(entry -> entry.getOptions().stream())
-                .map(option -> option.getText().string())
-                .collect(Collectors.toList());
+        return Arrays.stream(searchResponse.getHits().getHits())
+                .map(hit -> hit.getSourceAsMap().get(FIELD_NAME).toString())
+                .toList();
     }
 }
 
